# MRM_FAIRNESS

mrm_fairness/: Installation.md  README.md  mkdocs.yml  pyproject.toml
mrm_fairness/docs/: Installation.md  index.md
mrm_fairness/src/mrm_fairness_auditor/: fairness_auditor.py
mrm_fairness/src/mrm_fairness_auditor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mrm_fairness/src/mrm_fairness_auditor/.ipynb_checkpoints/: __init__-checkpoint.py
